<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/restoredialogframe"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/restoreToFactory"
        android:textColor="@color/colorGold"
        android:textSize="33sp"/>

    <TextView
        android:id="@+id/content1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118dp"
        android:text="@string/content1"
        android:textColor="@color/colorWhite"
        android:textSize="27sp"/>

    <TextView
        android:id="@+id/content2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/content1"
        android:layout_marginTop="5dp"
        android:text="@string/content2"
        android:textColor="@color/colorWhite"
        android:textSize="27sp"/>


    <TextView
        android:id="@+id/restore"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorTransparent"
        android:text="@string/restore"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="26sp"/>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorTransparent"
        android:text="@string/cancel"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="26sp"/>

    <View
        android:id="@+id/line_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGoldFrame"
        android:layout_below="@id/content2"
        android:layout_marginTop="10dp"
        />

    <View
        android:layout_width="1dp"
        android:layout_height="81dp"
        android:background="@color/colorGoldFrame"
        android:layout_below="@id/line_view"
        android:layout_marginStart="300dp"
        />

</RelativeLayout>
