<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/imageset_bg">

    <TextView
        android:id="@+id/brightness_adjust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="29dp"
        android:text="@string/brightnessAdjust"
        android:textColor="@color/colorGray"
        android:textSize="30sp"
        />



    <TextView
        android:id="@+id/contrast_adjust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/brightness_adjust"
        android:layout_marginStart="28dp"
        android:layout_marginTop="57dp"
        android:text="@string/contrastAdjust"
        android:textColor="@color/colorGray"
        android:textSize="30sp"
        />


    <TextView
        android:id="@+id/saturability_adjust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contrast_adjust"
        android:layout_marginStart="28dp"
        android:layout_marginTop="57dp"
        android:text="@string/saturabilityAdjust"
        android:textColor="@color/colorGray"
        android:textSize="30sp"
        />

</RelativeLayout>
